Add Cypress as the testFramework fo UI Integration tests

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -7,10 +7,10 @@
       "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
       "entities": {
         "main": "Entities",
+        "babyHumor": "Humor",
         "babyBabyProfile": "Baby Profile",
         "babyBreastFeed": "Breast Feed",
         "babyHeight": "Height",
-        "humor": "Humor",
         "babyHumorHistory": "Humor History",
         "babyNap": "Nap",
         "babyWeight": "Weight",
