Improve and translate Nap UI

--- a/src/main/webapp/i18n/pt-br/baby-place.json
+++ b/src/main/webapp/i18n/pt-br/baby-place.json
@@ -2,10 +2,10 @@
   "gatewayApp": {
     "Place": {
       "null": "",
-      "LAP": "LAP",
-      "BABY_CRIB": "BABY_CRIB",
-      "CART": "CART",
-      "BABY_CONFORT": "BABY_CONFORT"
+      "LAP": "Colo",
+      "BABY_CRIB": "Berço",
+      "CART": "Carrinho de Bebê",
+      "BABY_CONFORT": "Bebê Conforto"
     }
   }
 }
