--- a/src/main/webapp/i18n/pt-br/babyNap.json
+++ b/src/main/webapp/i18n/pt-br/babyNap.json
@@ -14,6 +14,9 @@
       "detail": {
         "title": "Soneca"
       },
+      "validate": {
+        "dateError": "A data de Início não pode ser maior que a de Fim!"
+      },
       "id": "ID",
       "start": "Início",
       "end": "Fim",
