Add Bed to Place

--- a/src/main/webapp/i18n/pt-br/baby-place.json
+++ b/src/main/webapp/i18n/pt-br/baby-place.json
@@ -5,7 +5,8 @@
       "LAP": "Colo",
       "BABY_CRIB": "Berço",
       "CART": "Carrinho de Bebê",
-      "BABY_CONFORT": "Bebê Conforto"
+      "BABY_CONFORT": "Bebê Conforto",
+      "BED": "Cama"
     }
   }
 }
