--- a/src/main/webapp/i18n/en/baby-place.json
+++ b/src/main/webapp/i18n/en/baby-place.json
@@ -2,10 +2,11 @@
   "gatewayApp": {
     "Place": {
       "null": "",
-      "LAP": "LAP",
-      "BABY_CRIB": "BABY_CRIB",
-      "CART": "CART",
-      "BABY_CONFORT": "BABY_CONFORT"
+      "LAP": "Lap",
+      "BABY_CRIB": "Baby Crib",
+      "CART": "Cart",
+      "BABY_CONFORT": "Baby Confort",
+      "BED": "Bed"
     }
   }
 }
