--- a/src/main/webapp/i18n/pt-br/babyBabyProfile.json
+++ b/src/main/webapp/i18n/pt-br/babyBabyProfile.json
@@ -12,7 +12,7 @@
         "question": "Tem certeza de que deseja excluir Baby Profile {{ id }}?"
       },
       "detail": {
-        "title": "Baby Profile"
+        "title": "Perfil (Hoje, {{date}})"
       },
       "id": "ID",
       "name": "Nome",
@@ -20,6 +20,10 @@
       "birthday": "Data de Nascimento",
       "sign": "Signo",
       "main": "Perfil Principal",
+      "humorAverageHumorHistory": "Humor <br/> (média de hoje)",
+      "addHumorHistory": "Humor",
+      "humorAverageNap": "Humor após Soneca <br/> (média de hoje)",
+      "addNap": "Soneca",
       "userId": "User Id"
     }
   },
