--- a/src/main/webapp/i18n/pt-br/babyHumorHistory.json
+++ b/src/main/webapp/i18n/pt-br/babyHumorHistory.json
@@ -2,29 +2,29 @@
   "gatewayApp": {
     "babyHumorHistory": {
       "home": {
-        "title": "Humor Histories",
+        "title": "Histórico do Humor",
         "refreshListLabel": "Atualizar lista",
-        "createLabel": "Criar novo Humor History",
-        "createOrEditLabel": "Criar ou editar Humor History",
-        "notFound": "Nenhum Humor History encontrado"
+        "createLabel": "Criar novo Humor",
+        "createOrEditLabel": "Criar ou editar Humor",
+        "notFound": "Nenhum Humor encontrado"
       },
       "delete": {
-        "question": "Tem certeza de que deseja excluir Humor History {{ id }}?"
+        "question": "Tem certeza de que deseja excluir Humor {{ id }}?"
       },
       "detail": {
-        "title": "Humor History"
+        "title": "Humor"
       },
       "id": "ID",
       "date": "Date",
-      "babyProfile": "Baby Profile",
+      "babyProfile": "Profile do Bebê",
       "humor": "Humor"
     }
   },
   "babyApp": {
     "babyHumorHistory": {
-      "created": "Um novo Humor History foi criado com o identificador {{ param }}",
-      "updated": "Um Humor History foi atualizado com o identificador {{ param }}",
-      "deleted": "Um Humor History foi excluído com o identificador {{ param }}"
+      "created": "Um novo Humor foi criado com o identificador {{ param }}",
+      "updated": "Um Humor foi atualizado com o identificador {{ param }}",
+      "deleted": "Um Humor foi excluído com o identificador {{ param }}"
     }
   }
 }
