Show the favorite nap place from the last 30 days

--- a/src/main/webapp/i18n/en/babyBabyProfile.json
+++ b/src/main/webapp/i18n/en/babyBabyProfile.json
@@ -23,6 +23,9 @@
       "humorAverageHumorHistory": "Humor <br/> (today average)",
       "addHumorHistory": "Humor",
       "humorAverageNap": "Humor after Nap <br/> (today average)",
+      "favoriteNapPlace": "Favorite Nap Place",
+      "favoriteNapPlaceLastDays": "(from the last {{lastDays}} days)",
+      "favoriteNapPlaceAmountOfTimes": " ({{amountOfTimes}} times)",
       "addNap": "Nap",
       "userId": "User Id"
     }
