--- a/src/main/webapp/i18n/en/babyWeight.json
+++ b/src/main/webapp/i18n/en/babyWeight.json
@@ -15,7 +15,7 @@
         "title": "Weight"
       },
       "id": "ID",
-      "value": "Value",
+      "value": "Weight (Kg)",
       "date": "Date",
       "babyProfile": "Baby Profile"
     }
