--- a/src/main/webapp/i18n/pt-br/babyBabyProfile.json
+++ b/src/main/webapp/i18n/pt-br/babyBabyProfile.json
@@ -27,6 +27,10 @@
       "favoriteNapPlace": "Local Favorito da Soneca",
       "favoriteNapPlaceLastDays": "(dos últimos {{lastDays}} dias)",
       "favoriteNapPlaceAmountOfTimes": " ({{amountOfTimes}} vezes)",
+      "weight": "Peso",
+      "latestWeight": "{{weight}} Kg",
+      "addWight": "Peso",
+      "latestHeigh": "Altura",
       "userId": "User Id"
     }
   },
