Show the latest height by baby profile id at the babyProfile detail UI

--- a/src/main/webapp/i18n/en/babyBabyProfile.json
+++ b/src/main/webapp/i18n/en/babyBabyProfile.json
@@ -30,7 +30,9 @@
       "weight": "Weight",
       "latestWeight": "{{weight}} Kg",
       "addWight": "Weight",
-      "latestHeigh": "Height",
+      "height": "Height",
+      "latestHeight": "{{height}} cm",
+      "addHight": "Height",
       "userId": "User Id"
     }
   },
