--- a/src/main/webapp/i18n/pt-br/babyBabyProfile.json
+++ b/src/main/webapp/i18n/pt-br/babyBabyProfile.json
@@ -30,7 +30,9 @@
       "weight": "Peso",
       "latestWeight": "{{weight}} Kg",
       "addWight": "Peso",
-      "latestHeigh": "Altura",
+      "height": "Altura",
+      "latestHeight": "{{height}} cm",
+      "addHight": "Altura",
       "userId": "User Id"
     }
   },
