--- a/src/main/webapp/i18n/pt-br/babyWeight.json
+++ b/src/main/webapp/i18n/pt-br/babyWeight.json
@@ -15,7 +15,7 @@
         "title": "Peso"
       },
       "id": "ID",
-      "value": "Peso (Kg)",
+      "value": "Peso (kg)",
       "date": "Data",
       "babyProfile": "Perfil do Bebê"
     }
