Only ADMIN Role can delete baby profile and access humor and breast-feed endpoints

--- a/src/main/webapp/i18n/pt-br/global.json
+++ b/src/main/webapp/i18n/pt-br/global.json
@@ -6,12 +6,12 @@
       "home": "Início",
       "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
       "entities": {
-        "main": "Entidades",
+        "main": "Meu Bebê",
         "babyHumor": "Humor",
         "babyBabyProfile": "Perfil",
         "babyBreastFeed": "Breast Feed",
         "babyHeight": "Altura",
-        "babyHumorHistory": "Humores",
+        "babyHumorHistory": "Histórico do Humor",
         "babyNap": "Soneca",
         "babyWeight": "Peso",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
