Configure the application email service wich will be sent by mamazinha.mail@gmail.com

--- a/src/main/resources/i18n/messages_pt_BR.properties
+++ b/src/main/resources/i18n/messages_pt_BR.properties
@@ -5,17 +5,17 @@ error.status=Status:
 error.message=Mensagem:
 
 # Activation email
-email.activation.title=gateway ativação
+email.activation.title=Mamazinha ativação de conta
 email.activation.greeting=Caro {0}
-email.activation.text1=Sua conta gateway foi criada, por favor clique na URL abaixo para ativá-la:
+email.activation.text1=Sua conta Mamazinha foi criada, por favor clique na URL abaixo para ativá-la:
 email.activation.text2=Atenciosamente,
-email.signature=Equipe gateway.
+email.signature=Equipe Mamazinha.
 
 # Creation email
-email.creation.text1=Sua conta gateway foi criada, por favor clique na URL abaixo para acessá-la:
+email.creation.text1=Sua conta Mamazinha foi criada, por favor clique na URL abaixo para acessá-la:
 
 # Reset email
-email.reset.title=A Senha da aplicação gateway foi redifinida
+email.reset.title=A Senha da aplicação Mamazinha foi redifinida
 email.reset.greeting=Caro {0}
-email.reset.text1=Foi solicitado a redefinição de senha da sua conta gateway. Por favor clique na url abaixo para alterá-la:
+email.reset.text1=Foi solicitado a redefinição de senha da sua conta Mamazinha. Por favor clique na url abaixo para alterá-la:
 email.reset.text2=Atenciosamente,
