--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -5,17 +5,17 @@ error.status=Status:
 error.message=Message:
 
 # Activation email
-email.activation.title=gateway account activation
+email.activation.title=Mamazinha account activation
 email.activation.greeting=Dear {0}
-email.activation.text1=Your gateway account has been created, please click on the URL below to activate it:
+email.activation.text1=Your Mamazinha account has been created, please click on the URL below to activate it:
 email.activation.text2=Regards,
-email.signature=gateway Team.
+email.signature=Mamazinha Team.
 
 # Creation email
-email.creation.text1=Your gateway account has been created, please click on the URL below to access it:
+email.creation.text1=Your Mamazinha account has been created, please click on the URL below to access it:
 
 # Reset email
-email.reset.title=gateway password reset
+email.reset.title=Mamazinha password reset
 email.reset.greeting=Dear {0}
-email.reset.text1=For your gateway account a password reset was requested, please click on the URL below to reset it:
+email.reset.text1=For your Mamazinha account a password reset was requested, please click on the URL below to reset it:
 email.reset.text2=Regards,
