Translate all messages

--- a/src/main/webapp/i18n/en/babyHeight.json
+++ b/src/main/webapp/i18n/en/babyHeight.json
@@ -15,7 +15,7 @@
         "title": "Height"
       },
       "id": "ID",
-      "value": "Value",
+      "value": "Height (cm)",
       "date": "Date",
       "babyProfile": "Baby Profile"
     }
