--- a/src/main/webapp/i18n/pt-br/babyHeight.json
+++ b/src/main/webapp/i18n/pt-br/babyHeight.json
@@ -12,7 +12,7 @@
         "question": "Tem certeza de que deseja excluir Altura {{ id }}?"
       },
       "detail": {
-        "title": "Height"
+        "title": "Altura"
       },
       "id": "ID",
       "value": "Altura (cm)",
