--- a/src/main/webapp/i18n/pt-br/babyHumorHistory.json
+++ b/src/main/webapp/i18n/pt-br/babyHumorHistory.json
@@ -15,7 +15,7 @@
         "title": "Humor"
       },
       "id": "ID",
-      "date": "Date",
+      "date": "Data",
       "babyProfile": "Profile do Bebê",
       "humor": "Humor"
     }
