--- a/src/main/webapp/i18n/en/babyHumorHistory.json
+++ b/src/main/webapp/i18n/en/babyHumorHistory.json
@@ -4,15 +4,15 @@
       "home": {
         "title": "Humor Histories",
         "refreshListLabel": "Refresh list",
-        "createLabel": "Create a new Humor History",
-        "createOrEditLabel": "Create or edit a Humor History",
-        "notFound": "No Humor Histories found"
+        "createLabel": "Create a new Humor",
+        "createOrEditLabel": "Create or edit a Humor",
+        "notFound": "No Humor found"
       },
       "delete": {
-        "question": "Are you sure you want to delete Humor History {{ id }}?"
+        "question": "Are you sure you want to delete Humor {{ id }}?"
       },
       "detail": {
-        "title": "Humor History"
+        "title": "Humor"
       },
       "id": "ID",
       "date": "Date",
@@ -22,9 +22,9 @@
   },
   "babyApp": {
     "babyHumorHistory": {
-      "created": "A new Humor History is created with identifier {{ param }}",
-      "updated": "A Humor History is updated with identifier {{ param }}",
-      "deleted": "A Humor History is deleted with identifier {{ param }}"
+      "created": "A new Humor is created with identifier {{ param }}",
+      "updated": "A Humor is updated with identifier {{ param }}",
+      "deleted": "A Humor is deleted with identifier {{ param }}"
     }
   }
 }
