--- a/src/main/webapp/i18n/en/babyNap.json
+++ b/src/main/webapp/i18n/en/babyNap.json
@@ -14,6 +14,9 @@
       "detail": {
         "title": "Nap"
       },
+      "validate": {
+        "dateError": "Start date cannot be greater than End date!"
+      },
       "id": "ID",
       "start": "Start",
       "end": "End",
