Implement the breastfeed crud flow and the incomplete breastfeed in come screen

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -9,7 +9,7 @@
         "main": "My Baby",
         "babyHumor": "Humor",
         "babyBabyProfile": "Baby Profile",
-        "babyBreastFeed": "Breast Feed",
+        "babyBreastFeed": "Breast/Formula feeding",
         "babyHeight": "Height",
         "babyHumorHistory": "Humor History",
         "babyNap": "Nap",
