--- a/src/main/webapp/i18n/pt-br/global.json
+++ b/src/main/webapp/i18n/pt-br/global.json
@@ -9,7 +9,7 @@
         "main": "Meu Bebê",
         "babyHumor": "Humor",
         "babyBabyProfile": "Perfil",
-        "babyBreastFeed": "Breast Feed",
+        "babyBreastFeed": "Amamentação/Fórmula",
         "babyHeight": "Altura",
         "babyHumorHistory": "Histórico do Humor",
         "babyNap": "Soneca",
