--- a/src/main/webapp/i18n/pt-br/home.json
+++ b/src/main/webapp/i18n/pt-br/home.json
@@ -21,6 +21,13 @@
         "addnap": "Soneca",
         "progressbarTitle": "{{sleepHours}} / Objetivo: {{goal}}",
         "noprogress": "{{name}} ainda não dormiu hoje?"
+      },
+      "breastFeed": {
+        "incompletebreastFeeds": {
+          "title": "{{name}} terminou de amamentar/fórmula a seguir?",
+          "yes": "Adicionar horário de fim",
+          "no": "Remover esta amamentação/fórmula"
+        }
       }
     },
     "question": "Em caso de dúvida sobre o JHipster:",
