--- a/src/main/webapp/i18n/en/babyBreastFeed.json
+++ b/src/main/webapp/i18n/en/babyBreastFeed.json
@@ -2,17 +2,17 @@
   "gatewayApp": {
     "babyBreastFeed": {
       "home": {
-        "title": "Breast Feeds",
+        "title": "Breast/Formula feeding",
         "refreshListLabel": "Refresh list",
-        "createLabel": "Create a new Breast Feed",
-        "createOrEditLabel": "Create or edit a Breast Feed",
-        "notFound": "No Breast Feeds found"
+        "createLabel": "Create a new Breast/Formula feeding",
+        "createOrEditLabel": "Create or edit a Breast/Formula feeding",
+        "notFound": "No Breast/Formula feeding found"
       },
       "delete": {
-        "question": "Are you sure you want to delete Breast Feed {{ id }}?"
+        "question": "Are you sure you want to delete Breast/Formula feeding {{ id }}?"
       },
       "detail": {
-        "title": "Breast Feed"
+        "title": "Breast/Formula feeding"
       },
       "id": "ID",
       "start": "Start",
@@ -23,9 +23,9 @@
   },
   "babyApp": {
     "babyBreastFeed": {
-      "created": "A new Breast Feed is created with identifier {{ param }}",
-      "updated": "A Breast Feed is updated with identifier {{ param }}",
-      "deleted": "A Breast Feed is deleted with identifier {{ param }}"
+      "created": "A new Breast/Formula feeding is created with identifier {{ param }}",
+      "updated": "A Breast/Formula feeding is updated with identifier {{ param }}",
+      "deleted": "A Breast/Formula feeding is deleted with identifier {{ param }}"
     }
   }
 }
