Show breast/formula feeding from last week and current week on graphic line

--- a/src/main/webapp/i18n/en/d3-chart.json
+++ b/src/main/webapp/i18n/en/d3-chart.json
@@ -24,6 +24,7 @@
     "currentWeek": "Current Week",
     "goal": "Goal",
     "dayOfWeek": "Day of Week",
-    "sleepHours": "Sleep Hours"
+    "sleepHours": "Sleep Hours",
+    "averageFeedHours": "Average Feeding Time (Hours)"
   }
 }
