--- a/src/main/webapp/i18n/pt-br/d3-chart.json
+++ b/src/main/webapp/i18n/pt-br/d3-chart.json
@@ -24,6 +24,7 @@
     "currentWeek": "Semana Atual",
     "goal": "Objetivo",
     "dayOfWeek": "Dia da Semana",
-    "sleepHours": "Horas de Sono"
+    "sleepHours": "Horas de Sono",
+    "averageFeedHours": "Tempo médio de Alimentação (Horas)"
   }
 }
