--- a/src/main/webapp/i18n/pt-br/home.json
+++ b/src/main/webapp/i18n/pt-br/home.json
@@ -24,11 +24,12 @@
       },
       "breastFeed": {
         "incompletebreastFeeds": {
-          "title": "{{name}} terminou de amamentar/fórmula a seguir?",
+          "title": "{{name}} terminou a seguinte mamada / alimentação com fórmula??",
           "yes": "Adicionar horário de fim",
           "no": "Remover esta amamentação/fórmula"
         },
-        "addBreastFeed": "Amamentação/Fórmula"
+        "addBreastFeed": "Amamentação/Fórmula",
+        "today": "{{name}} já mamou/tomou fórmula hoje?"
       }
     },
     "question": "Em caso de dúvida sobre o JHipster:",
