Create custom tooltip, working in progress

--- a/src/main/webapp/i18n/en/d3-chart.json
+++ b/src/main/webapp/i18n/en/d3-chart.json
@@ -25,6 +25,9 @@
     "goal": "Goal",
     "dayOfWeek": "Day of Week",
     "sleepHours": "Sleep Hours",
-    "averageFeedHours": "Average Feeding Time (Hours)"
+    "averageFeedHours": "Average Feeding Time (Hours)",
+    "feedingDurationHours": "Feeding duration (Hours)",
+    "feedingTimesToday": "Today Breast/Formula feeding",
+    "amountOfTimes": "Amount of times"
   }
 }
