Add breastfeed today title chart and translate dates

--- a/src/main/webapp/i18n/en/d3-chart.json
+++ b/src/main/webapp/i18n/en/d3-chart.json
@@ -32,6 +32,7 @@
     "time": "time",
     "duration": "Duration",
     "start": "Start",
-    "end": "End"
+    "end": "End",
+    "breastFeedTodayChartTitle": "Today"
   }
 }
