--- a/src/main/webapp/i18n/pt-br/d3-chart.json
+++ b/src/main/webapp/i18n/pt-br/d3-chart.json
@@ -32,6 +32,7 @@
     "time": "vez",
     "duration": "Duração",
     "start": "Início",
-    "end": "Fim"
+    "end": "Fim",
+    "breastFeedTodayChartTitle": "Hoje"
   }
 }
