--- a/src/main/webapp/i18n/en/d3-chart.json
+++ b/src/main/webapp/i18n/en/d3-chart.json
@@ -27,12 +27,11 @@
     "sleepHours": "Sleep Hours",
     "averageFeedHours": "Average Feeding Time (Hours)",
     "feedingDurationHours": "Feeding amount of time (Hours)",
-    "feedingTimesToday": "Today Breast/Formula feeding",
     "amountOfTimes": "Amount of times",
     "time": "time",
     "duration": "Duration",
     "start": "Start",
     "end": "End",
-    "breastFeedTodayChartTitle": "Today"
+    "breastFeedTodayChartTitle": "Breast/Formula feeding, today"
   }
 }
