Show average nap humor graphic, but its working in progress

--- a/src/main/webapp/i18n/en/d3-chart.json
+++ b/src/main/webapp/i18n/en/d3-chart.json
@@ -32,6 +32,12 @@
     "duration": "Duration",
     "start": "Start",
     "end": "End",
-    "breastFeedTodayChartTitle": "Breast/Formula feeding, today"
+    "breastFeedTodayChartTitle": "Breast/Formula feeding, today",
+    "averageNapHumor": "Average humor after nap",
+    "angry": "angry",
+    "sad": "sad",
+    "calm": "calm",
+    "happy": "happy",
+    "excited": "excited"
   }
 }
