--- a/src/main/webapp/i18n/pt-br/d3-chart.json
+++ b/src/main/webapp/i18n/pt-br/d3-chart.json
@@ -32,6 +32,12 @@
     "duration": "Duração",
     "start": "Início",
     "end": "Fim",
-    "breastFeedTodayChartTitle": "Amamentação/Fórmula, hoje"
+    "breastFeedTodayChartTitle": "Amamentação/Fórmula, hoje",
+    "averageNapHumor": "Média do Humor ao Acordar",
+    "angry": "raiva",
+    "sad": "triste",
+    "calm": "calmo",
+    "happy": "feliz",
+    "excited": "empolgado"
   }
 }
